--- a/machinefeeds/src/main/resources/application.properties
+++ b/machinefeeds/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=machinefeeds
 server.port=8080
+service.machine.url=http://localhost:8081/machines/
+service.repair.url=http://localhost:8082/repairs/
+service.session.url=http://localhost:8083/sessions/
